src/acp/snapshots/local_llm_acp__acp__golden__golden_cancel_during_tool.snap
---
source: src/acp/golden.rs
expression: normalize(capture.frames())
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "serverCapabilities": {
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "serverInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      }
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "sessionId": "[session-id]"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": {}
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawInput": {
          "arguments": {
            "searchTerm": "x"
          }
        },
        "sessionUpdate": "tool_call",
        "status": "pending",
        "title": "find_blueprints",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/connect",
    "params": {}
  },
  {
    "id": 4,
    "jsonrpc": "2.0",
    "result": {
      "stopReason": "cancelled"
    }
  }
]
