src/acp/snapshots/local_llm_acp__acp__golden__golden_chat_with_reasoning.snap
---
source: src/acp/golden.rs
expression: frames
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "agentCapabilities": {
        "loadSession": true,
        "promptCapabilities": {
          "audio": false,
          "embeddedContext": false,
          "image": false
        },
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "agentInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      },
      "authMethods": [],
      "protocolVersion": 1
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "sessionId": "[session-id]"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": {}
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": "let me think",
          "type": "text"
        },
        "sessionUpdate": "agent_thought_chunk"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": " about it",
          "type": "text"
        },
        "sessionUpdate": "agent_thought_chunk"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": "the answer",
          "type": "text"
        },
        "sessionUpdate": "agent_message_chunk"
      }
    }
  },
  {
    "id": 4,
    "jsonrpc": "2.0",
    "result": {
      "stopReason": "end_turn"
    }
  }
]
