src/acp/snapshots/local_llm_acp__acp__golden__golden_circuit_breaker.snap
---
source: src/acp/golden.rs
expression: frames
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "agentCapabilities": {
        "loadSession": false,
        "promptCapabilities": {
          "audio": false,
          "embeddedContext": false,
          "image": false
        },
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "agentInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      },
      "authMethods": [],
      "protocolVersion": 1
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "sessionId": "[session-id]"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": {}
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawInput": {
          "arguments": {
            "searchTerm": "x"
          }
        },
        "sessionUpdate": "tool_call",
        "status": "pending",
        "title": "find_blueprints",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/connect",
    "params": {}
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/message",
    "params": {
      "connectionId": "test-conn",
      "message": {
        "jsonrpc": "2.0",
        "method": "tools/call",
        "params": {
          "arguments": {
            "searchTerm": "x"
          },
          "name": "find_blueprints"
        }
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawOutput": {
          "content": [
            {
              "text": "tool failed",
              "type": "text"
            }
          ],
          "isError": true
        },
        "sessionUpdate": "tool_call_update",
        "status": "failed",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawInput": {
          "arguments": {
            "searchTerm": "x"
          }
        },
        "sessionUpdate": "tool_call",
        "status": "pending",
        "title": "find_blueprints",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/message",
    "params": {
      "connectionId": "test-conn",
      "message": {
        "jsonrpc": "2.0",
        "method": "tools/call",
        "params": {
          "arguments": {
            "searchTerm": "x"
          },
          "name": "find_blueprints"
        }
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawOutput": {
          "content": [
            {
              "text": "tool failed",
              "type": "text"
            }
          ],
          "isError": true
        },
        "sessionUpdate": "tool_call_update",
        "status": "failed",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawInput": {
          "arguments": {
            "searchTerm": "x"
          }
        },
        "sessionUpdate": "tool_call",
        "status": "pending",
        "title": "find_blueprints",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/message",
    "params": {
      "connectionId": "test-conn",
      "message": {
        "jsonrpc": "2.0",
        "method": "tools/call",
        "params": {
          "arguments": {
            "searchTerm": "x"
          },
          "name": "find_blueprints"
        }
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawOutput": {
          "content": [
            {
              "text": "tool failed",
              "type": "text"
            }
          ],
          "isError": true
        },
        "sessionUpdate": "tool_call_update",
        "status": "failed",
        "toolCallId": "call_1"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": "Tool `find_blueprints` returned an error 3 consecutive times with identical arguments. Aborting to prevent runaway inference. Adjust the request or try a different approach.",
          "type": "text"
        },
        "sessionUpdate": "agent_message_chunk"
      }
    }
  },
  {
    "id": 4,
    "jsonrpc": "2.0",
    "result": {
      "stopReason": "refusal"
    }
  }
]
