src/acp/snapshots/local_llm_acp__acp__golden__golden_drainer_panic_recovery.snap
---
source: src/acp/golden.rs
expression: normalize(capture.frames())
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "agentCapabilities": {
        "loadSession": true,
        "promptCapabilities": {
          "audio": false,
          "embeddedContext": false,
          "image": false
        },
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "agentInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      },
      "authMethods": [],
      "protocolVersion": 1
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "sessionId": "[session-id]"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": {}
  },
  {
    "error": {
      "code": -32000,
      "message": "[error-message]"
    },
    "id": 4,
    "jsonrpc": "2.0"
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": "hi",
          "type": "text"
        },
        "sessionUpdate": "agent_message_chunk"
      }
    }
  },
  {
    "id": 5,
    "jsonrpc": "2.0",
    "result": {
      "stopReason": "end_turn"
    }
  }
]
