src/acp/snapshots/local_llm_acp__acp__golden__golden_initialize.snap
---
source: src/acp/golden.rs
expression: frames
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "agentCapabilities": {
        "loadSession": false,
        "promptCapabilities": {
          "audio": false,
          "embeddedContext": false,
          "image": false
        },
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "agentInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      },
      "authMethods": [],
      "protocolVersion": 1
    }
  }
]
