src/acp/snapshots/local_llm_acp__acp__golden__golden_tool_emulated_inline_json.snap
---
source: src/acp/golden.rs
expression: frames
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "agentCapabilities": {
        "loadSession": false,
        "promptCapabilities": {
          "audio": false,
          "embeddedContext": false,
          "image": false
        },
        "session": {
          "cancel": true,
          "prompt": true,
          "setConfigOption": true
        }
      },
      "agentInfo": {
        "name": "local-llm-acp",
        "version": "[version]"
      },
      "authMethods": [],
      "protocolVersion": 1
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "sessionId": "[session-id]"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": {}
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawInput": {
          "arguments": {
            "searchTerm": "box"
          }
        },
        "sessionUpdate": "tool_call",
        "status": "pending",
        "title": "find_blueprints",
        "toolCallId": "[synth-tool-id]"
      }
    }
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/connect",
    "params": {}
  },
  {
    "id": "[mcp-id]",
    "jsonrpc": "2.0",
    "method": "mcp/message",
    "params": {
      "connectionId": "test-conn",
      "message": {
        "jsonrpc": "2.0",
        "method": "tools/call",
        "params": {
          "arguments": {
            "searchTerm": "box"
          },
          "name": "find_blueprints"
        }
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "rawOutput": {
          "content": [
            {
              "text": "1 result",
              "type": "text"
            }
          ],
          "isError": false
        },
        "sessionUpdate": "tool_call_update",
        "status": "completed",
        "toolCallId": "[synth-tool-id]"
      }
    }
  },
  {
    "jsonrpc": "2.0",
    "method": "session/update",
    "params": {
      "sessionId": "[session-id]",
      "update": {
        "content": {
          "text": "found 1 result",
          "type": "text"
        },
        "sessionUpdate": "agent_message_chunk"
      }
    }
  },
  {
    "id": 4,
    "jsonrpc": "2.0",
    "result": {
      "stopReason": "end_turn"
    }
  }
]
